update user page

--- a/oops_front/src/styles/index.scss
+++ b/oops_front/src/styles/index.scss
@@ -63,3 +63,24 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+// custom style
+.el-avatar {
+  display: inline-block;
+  text-align: center;
+  background: #ccc;
+  color: #fff;
+  white-space: nowrap;
+  position: relative;
+  overflow: hidden;
+  vertical-align: middle;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  border-radius: 16px;
+}
+.head-container {
+  padding-bottom: 20px;
+}
+.footer-container {
+  padding-top: 20px;
+}
